Adding CIM Mapping for Vulnerabilities Datamodel

--- a/package/default/props.conf
+++ b/package/default/props.conf
@@ -227,7 +227,23 @@ EVAL-resourceType = case(\
 ####################
 
 [azure:resourcegraph]
+EVAL-cvss = ifnull(cvss,'xref')
+EVAL-dvc = dvc=dest
+EXTRACT-mskb = HREF=\\\\\"(?P<mskb>https:\/\/portal.msrc.microsoft.com\/.*?)\"
+EXTRACT-msft = HREF=\\\\\"(?P<msft>https:\/\/technet.microsoft.com\/.*?)\"
+EXTRACT-dest = \"resourceDetails\":\s\{\"id\":\s\".[^\"]+\/(?P<dest>.*?)\"
+FIELDALIAS-aob_gen_azure_resourcegraph_alias_1 = properties.additionalData.cve{}.title AS cve
+FIELDALIAS-aob_gen_azure_resourcegraph_alias_2 = properties.additionalData.cvss.3.0.base AS cvss
+FIELDALIAS-aob_gen_azure_resourcegraph_alias_3 = properties.additionalData.cvss.2.0.base AS xref
+FIELDALIAS-aob_gen_azure_resourcegraph_alias_4 = properties.status.severity AS severity
+FIELDALIAS-aob_gen_azure_resourcegraph_alias_5 = properties.description AS signature
+FIELDALIAS-aob_gen_azure_resourcegraph_alias_6 = properties.category AS category
+FIELDALIAS-aob_gen_azure_resourcegraph_alias_7 = properties.resourceDetails.source AS vendor_product
+FIELDALIAS-aob_gen_azure_resourcegraph_alias_8 = properties.id AS signature_id
+FIELDALIAS-aob_gen_azure_resourcegraph_alias_9 = properties.additionalData.vendorReferences{}.link AS url
 SHOULD_LINEMERGE = 0
+category = Splunk App Add-on Builder
+pulldown_type = 1
 
 [azure:reservation:recommendation]
 SHOULD_LINEMERGE = 0
