--- a/package/default/tags.conf
+++ b/package/default/tags.conf
@@ -39,3 +39,6 @@ modaction_result = enabled
 [eventtype=add_member_m365_group_modaction_result]
 modaction_result = enabled
 
+[eventtype=azure_vuln]
+report = enabled
+vulnerability = enabled
