--- a/package/default/eventtypes.conf
+++ b/package/default/eventtypes.conf
@@ -35,3 +35,6 @@ search = sourcetype="azure:vm:stop"
 [add_member_m365_group_modaction_result]
 search = sourcetype="m365:group:member:add"
 
+[azure_vuln]
+search = (sourcetype=azure:resourcegraph type="microsoft.security/assessments/subAssessments" "properties.additionalData.assessedResourceType"=ServerVulnerability 
+properties.additionalData.cve{}.title=*)
